deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-deployment
  name: web-deployment
spec:
  selector:
    matchLabels:
      app: web-deployment
  minReadySeconds: 60
  replicas: 3
  template:
    metadata:
      labels:
        app: web-deployment
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:1.0
        name: web-server
        ports:
        - containerPort: 8080
          protocol: TCP
      terminationGracePeriodSeconds: 90
