service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - name: web-service
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: web-deployment
  type: ClusterIP
