ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservice-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce-internal"
    kubernetes.io/ingress.allow-http: "false"
    ingress.gcp.kubernetes.io/pre-shared-cert: "sq-cert"
spec:
  defaultBackend:
    service:
      name: web-service
      port:
        number: 8080
